feat: apollo-cache-inmemory 与 apollo-devtools 结合

--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,18 @@
     "@types/node": "12.7.7",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
-    "apollo-boost": "^0.4.4",
+    "apollo-boost": "0.4.9",
+    "apollo-client": "^2.6.10",
+    "apollo-link-state": "^0.4.2",
     "graphql": "^14.5.7",
     "react": "^16.9.0",
-    "react-apollo": "^3.1.1",
+    "react-apollo": "3.1.5",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --lint=false",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "client": "npm start --prefix client",
